Fix landing page text alignment

--- a/index.css
+++ b/index.css
@@ -194,7 +194,7 @@ body {
   padding-top: 3%;
   color: #33ff33;
   font-family: Audiowide;
-  font-size: 6vmax;
+  font-size: 5vmax;
   line-height: 0%;
 }
 
